--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>kasper | Template 02 V1</title>
+    <title>OuBa7kasper | Template 02 V1</title>
     <!-- Render all element normally -->
     <link rel="stylesheet" href="css/normalize.css">
     <!-- Font Awesome Library -->
